--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova-res": "^0.15.4",
     "cordova-res-generator": "^0.4.2",
+    "date-fns": "^2.9.0",
     "es6-promise-plugin": "^4.2.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
