--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@awesome-cordova-plugins/clipboard": "^6.1.0",
     "@awesome-cordova-plugins/core": "^6.1.0",
     "@awesome-cordova-plugins/social-sharing": "^6.1.0",
-    "@capacitor/android": "4.1.0",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "4.1.0",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
@@ -59,7 +59,8 @@
     "@angular/compiler": "~14.2.5",
     "@angular/compiler-cli": "~14.2.5",
     "@angular/language-service": "~14.2.5",
-    "@capacitor/cli": "4.1.0",
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
